# baremetalpong

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  frame_allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  screen.rs
src/: main.rs
