[package]
name = "lab-os"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none"}

[dependencies]
ovmf-prebuilt = "0.2.1"

[workspace]
members = [ "kernel" ]
