[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.3"
noto-sans-mono-bitmap = "0.3"

spin = "0.9"
x86_64 = "0.15"
pc-keyboard = "0.8"
acpi = "5.1.0"

lazy_static = { version = "1.5", features = ["spin_no_std"] }

